--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,7 +2,13 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta  name="Description" content="Méril Pilon - Software Engineer. Young and passionate problem solver. Communication and team working effective, strong programming and analytical skills. Started in France and now working in London."> 
+    <meta name="keywords" content="méril pilon, meril pilon, resume, engineer, computer science, linkedin, job, cv, ruffer, sopra">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <link rel="author" href="humans.txt" />
+    <link rel="icon" type="image/png" href="favicon.png">
+
     <title><%= data.page.title %></title>
     
     <%= stylesheet_link_tag "app", "style" %>
