--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,32 @@
 ---
-title: Welcome to Middleman
+title: Méril Pilon
 ---
 
-<div class="row">
-</div>
+<header id="home">
+    <nav id="nav-wrap">
+        <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
+        <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
+        <ul id="nav" class="nav">
+            <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
+            <li><a class="smoothscroll" href="#about">About</a></li>
+            <li><a class="smoothscroll" href="#resume">Resume</a></li>
+            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
+            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+            <li><a class="smoothscroll" href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="row banner">
+        <div class="banner-text">
+            <h1 class="responsive-headline">I'm Méril Pilon.</h1>
+            <h3>TODO.</h3>
+            <hr />
+            <ul class="social">
+                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fa fa-github"></i></a></li>
+            </ul>
+        </div>
+    </div>
+    <p class="scrolldown">
+        <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
+    </p>
+</header>
