--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -1,31 +1,29 @@
 @import "settings";
 @import "foundation.scss";
+@import "font-awesome.scss";
 
-
+/*
 header {
-  @include grid-row;
-
-  .logo  { @include grid-column($columns:3, $center:true); }
-  padding-bottom: em-calc(10px);
-
+    @include grid-row;
+    .logo {
+        @include grid-column($columns: 3, $center: true);
+    }
+    padding-bottom: em-calc(10px);
 }
-
 
 .main-content {
-  @include grid-row;
-
-  aside  {
-    @include grid-column($columns:6);
-    // @media #{$medium-up} {
-    //   @include grid-column($columns:3);
-    // }
-  }
-
-  article  {
-    @include grid-column($columns:6);
-    // @media #{$medium-up} {
-    //   @include grid-column($columns:8, $offset: 1);
-    // }
-  }
-
+    @include grid-row;
+    aside {
+        @include grid-column($columns: 6);
+        // @media #{$medium-up} {
+        //   @include grid-column($columns:3);
+        // }
+    }
+    article {
+        @include grid-column($columns: 6);
+        // @media #{$medium-up} {
+        //   @include grid-column($columns:8, $offset: 1);
+        // }
+    }
 }
+*/
