--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,30 +3,60 @@ title: Méril Pilon
 ---
 
 <header id="home">
-    <nav id="nav-wrap">
-        <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
-        <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
-        <ul id="nav" class="nav">
-            <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
-            <li><a class="smoothscroll" href="#about">About</a></li>
-            <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
-            <li><a class="smoothscroll" href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="row banner">
-        <div class="banner-text">
-            <h1 class="responsive-headline">I'm Méril Pilon.</h1>
-            <h3>TODO.</h3>
-            <hr />
-            <ul class="social">
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-github"></i></a></li>
-            </ul>
-        </div>
+  <nav id="nav-wrap">
+    <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
+    <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
+    <ul id="nav" class="nav">
+      <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
+      <li><a class="smoothscroll" href="#about">About</a></li>
+      <li><a class="smoothscroll" href="#resume">Resume</a></li>
+      <li><a class="smoothscroll" href="#portfolio">Works</a></li>
+      <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+      <li><a class="smoothscroll" href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  <div class="row banner">
+    <div class="banner-text">
+      <h1 class="responsive-headline">I am Méril Pilon.</h1>
+      <h3>I'm a Manila based graphic designer, illustrator and webdesigner creating awesome and effective visual identities for companies of all sizes around the globe. Let's start scrolling and learn more about me.</h3>
+      <hr />
+      <ul class="social">
+        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="#"><i class="fa fa-github"></i></a></li>
+      </ul>
     </div>
-    <p class="scrolldown">
-        <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
-    </p>
+  </div>
+  <p class="scrolldown">
+    <a class="smoothscroll" href="#about"><i class="fa fa-chevron-circle-down"></i></a>
+  </p>
 </header>
+<section id="about">
+  <div class="row">
+    <div class="nine columns main-col">
+      <h2>About Me</h2>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+      </p>
+      <div class="row">
+        <div class="columns contact-details">
+          <h2>Contact Details</h2>
+          <p class="address">
+            <span>Jonathan Doe</span>
+            <br>
+            <span>1600 Amphitheatre Parkway<br>
+                                 Mountain View, CA 94043 US
+                     </span>
+            <br>
+            <span>(123)456-7890</span>
+            <br>
+            <span>anyone@website.com</span>
+          </p>
+        </div>
+        <div class="columns download">
+          <p>
+            <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
