--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <link rel="author" href="humans.txt" />
-    <link rel="icon" type="image/png" href="favicon.png">
 
     <title><%= data.page.title %></title>
     
+    <%= favicon_tag 'images/favicon.png' %>
     <%= stylesheet_link_tag "app", "style" %>
     <%= javascript_include_tag "modernizr" %>
   </head>
