--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,6 @@
 ---
 title: Méril Pilon
 ---
-
 <header id="home">
   <nav id="nav-wrap">
     <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
@@ -10,15 +9,14 @@ title: Méril Pilon
       <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
       <li><a class="smoothscroll" href="#about">About</a></li>
       <li><a class="smoothscroll" href="#resume">Resume</a></li>
-      <li><a class="smoothscroll" href="#portfolio">Works</a></li>
       <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
       <li><a class="smoothscroll" href="#contact">Contact</a></li>
     </ul>
   </nav>
   <div class="row banner">
     <div class="banner-text">
-      <h1 class="responsive-headline">I am Méril Pilon.</h1>
-      <h3>I'm a Manila based graphic designer, illustrator and webdesigner creating awesome and effective visual identities for companies of all sizes around the globe. Let's start scrolling and learn more about me.</h3>
+      <h1 class="responsive-headline">I am John Doe.</h1>
+      <h3>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h3>
       <hr />
       <ul class="social">
         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
@@ -36,27 +34,144 @@ title: Méril Pilon
       <h2>About Me</h2>
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
       </p>
-      <div class="row">
-        <div class="columns contact-details">
-          <h2>Contact Details</h2>
-          <p class="address">
-            <span>Jonathan Doe</span>
-            <br>
-            <span>1600 Amphitheatre Parkway<br>
-                                 Mountain View, CA 94043 US
-                     </span>
-            <br>
-            <span>(123)456-7890</span>
-            <br>
-            <span>anyone@website.com</span>
+    </div>
+</section>
+<section id="resume">
+  <div class="row education">
+    <div class="three columns header-col">
+      <h1><span>Education</span></h1>
+    </div>
+    <div class="nine columns main-col">
+      <div class="row item">
+        <div class="twelve columns">
+          <h3>University of Life</h3>
+          <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
           </p>
         </div>
-        <div class="columns download">
+      </div>
+      <div class="row item">
+        <div class="twelve columns">
+          <h3>School of Cool Designers</h3>
+          <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
           <p>
-            <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
           </p>
         </div>
       </div>
     </div>
   </div>
+  <div class="row work">
+    <div class="three columns header-col">
+      <h1><span>Work</span></h1>
+    </div>
+    <div class="nine columns main-col">
+      <div class="row item">
+        <div class="twelve columns">
+          <h3>Awesome Design Studio</h3>
+          <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+          </p>
+        </div>
+      </div>
+      <div class="row item">
+        <div class="twelve columns">
+          <h3>Super Cool Studio</h3>
+          <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row skill">
+    <div class="three columns header-col">
+      <h1><span>Skills</span></h1>
+    </div>
+    <div class="nine columns main-col">
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+      </p>
+      <div class="bars">
+        <ul class="skills">
+          <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
+          <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
+          <li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
+          <li><span class="bar-expand css"></span><em>CSS</em></li>
+          <li><span class="bar-expand html5"></span><em>HTML5</em></li>
+          <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </section>
+<section id="testimonials">
+  <div class="text-container">
+    <div class="row">
+      <div class="two columns header-col">
+        <h1><span>Client Testimonials</span></h1>
+      </div>
+      <div class="ten columns flex-container">
+        <div class="flexslider">
+          <ul class="slides">
+            <li>
+              <blockquote>
+                <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                </p>
+                <cite>Steve Jobs</cite>
+              </blockquote>
+            </li>
+            <li>
+              <blockquote>
+                <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                </p>
+                <cite>Mr. Adobe</cite>
+              </blockquote>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section id="contact">
+  <div class="row section-head">
+    <div class="two columns header-col">
+      <h1><span>Get In Touch.</span></h1>
+    </div>
+    <div class="ten columns">
+      <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <aside class="four columns footer-widgets">
+      <div class="widget widget_contact">
+        <h4>Address and Phone</h4>
+        <p class="address">
+          Jonathan Doe
+          <br> 1600 Amphitheatre Parkway
+          <br> Mountain View, CA 94043 US
+          <br>
+          <span>(123) 456-7890</span>
+        </p>
+      </div>
+    </aside>
+  </div>
+</section>
+<footer>
+  <div class="row">
+    <div class="twelve columns">
+      <ul class="social-links">
+        <li><a href="#"><i class="fa fa-github"></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+      </ul>
+      <ul class="copyright">
+        <li>Design influenced by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
+      </ul>
+    </div>
+    <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
+  </div>
+</footer>
