--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,113 +1,58 @@
 ---
 title: Méril Pilon
 ---
-<header id="home">
-  <nav id="nav-wrap">
-    <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
-    <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
-    <ul id="nav" class="nav">
-      <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
-      <li><a class="smoothscroll" href="#about">About</a></li>
-      <li><a class="smoothscroll" href="#resume">Resume</a></li>
-      <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
-      <li><a class="smoothscroll" href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-  <div class="row banner">
-    <div class="banner-text">
-      <h1 class="responsive-headline">I am John Doe.</h1>
-      <h3>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h3>
-      <hr />
-      <ul class="social">
-        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-      </ul>
-    </div>
-  </div>
-  <p class="scrolldown">
-    <a class="smoothscroll" href="#about"><i class="fa fa-chevron-circle-down"></i></a>
-  </p>
-</header>
 <section id="about">
   <div class="row">
-    <div class="nine columns main-col">
+    <div class="small-12 columns">
       <h2>About Me</h2>
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
       </p>
     </div>
-</section>
-<section id="resume">
-  <div class="row education">
-    <div class="three columns header-col">
-      <h1><span>Education</span></h1>
-    </div>
-    <div class="nine columns main-col">
-      <div class="row item">
-        <div class="twelve columns">
-          <h3>University of Life</h3>
-          <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-          </p>
-        </div>
-      </div>
-      <div class="row item">
-        <div class="twelve columns">
-          <h3>School of Cool Designers</h3>
-          <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
-          <p>
-            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
-          </p>
-        </div>
-      </div>
+  </div>
+  <div class="row">
+    <div class="small-12 columns">
+      <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
     </div>
   </div>
+</section>
+<section id="resume">
   <div class="row work">
-    <div class="three columns header-col">
+    <div class="small-3 columns header-col">
       <h1><span>Work</span></h1>
     </div>
-    <div class="nine columns main-col">
+    <div class="small-9 columns">
       <div class="row item">
-        <div class="twelve columns">
-          <h3>Awesome Design Studio</h3>
-          <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+        <div class="small-12 columns main-col">
+          <h3>Company</h3>
+          <p class="info">Position <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
           <p>
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-          </p>
-        </div>
-      </div>
-      <div class="row item">
-        <div class="twelve columns">
-          <h3>Super Cool Studio</h3>
-          <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
-          <p>
-            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
           </p>
         </div>
       </div>
     </div>
   </div>
   <div class="row skill">
-    <div class="three columns header-col">
+    <div class="small-3 columns header-col">
       <h1><span>Skills</span></h1>
     </div>
-    <div class="nine columns main-col">
+    <div class="small-9 columns main-col">
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
       </p>
       <div class="bars">
         <ul class="skills">
-          <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
-          <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
-          <li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
-          <li><span class="bar-expand css"></span><em>CSS</em></li>
-          <li><span class="bar-expand html5"></span><em>HTML5</em></li>
-          <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
+          <li><span class="bar-expand skill1"></span><em>Skill1</em></li>
+          <li><span class="bar-expand skill2"></span><em>Skill2</em></li>
+          <li><span class="bar-expand skill3"></span><em>Skill3</em></li>
+          <li><span class="bar-expand skill4"></span><em>Skill4</em></li>
+          <li><span class="bar-expand skill5"></span><em>Skill5</em></li>
+          <li><span class="bar-expand skill6"></span><em>Skill6</em></li>
         </ul>
       </div>
     </div>
   </div>
 </section>
-<section id="testimonials">
+<!-- <section id="testimonials">
   <div class="text-container">
     <div class="row">
       <div class="two columns header-col">
@@ -175,3 +120,4 @@ title: Méril Pilon
     <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
   </div>
 </footer>
+ -->
