--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,6 +16,7 @@
   </head>
   
   <body class="<%= page_classes %>">
+    <%= partial "header" %>
     <%= yield %>
 
     <%= javascript_include_tag  "all" %>
