--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -52,7 +52,7 @@ title: Méril Pilon
     </div>
   </div>
 </section>
-<!-- <section id="testimonials">
+<section id="testimonials">
   <div class="text-container">
     <div class="row">
       <div class="two columns header-col">
@@ -106,18 +106,3 @@ title: Méril Pilon
     </aside>
   </div>
 </section>
-<footer>
-  <div class="row">
-    <div class="twelve columns">
-      <ul class="social-links">
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      </ul>
-      <ul class="copyright">
-        <li>Design influenced by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
-      </ul>
-    </div>
-    <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
-  </div>
-</footer>
- -->
