--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,6 +18,7 @@
   <body class="<%= page_classes %>">
     <%= partial "header" %>
     <%= yield %>
+    <%= partial "footer" %>
 
     <%= javascript_include_tag  "all" %>
   </body>
