Footer style + contact section
Signed-off-by: Méril Pilon <meril.pilon@gmail>

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -82,27 +82,14 @@ title: Méril Pilon
   </div>
 </section>
 <section id="contact">
-  <div class="row section-head">
-    <div class="two columns header-col">
-      <h1><span>Get In Touch.</span></h1>
+  <div class="row">
+    <div class="small-3 columns">
+      <h1>CONTACT</h1>
     </div>
-    <div class="ten columns">
-      <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+    <div class="small-9 columns">
+      <p class="lead">
+        Email me at: <a href="mailto:address@email.com">address [at] email.com</a>
       </p>
     </div>
-  </div>
-  <div class="row">
-    <aside class="four columns footer-widgets">
-      <div class="widget widget_contact">
-        <h4>Address and Phone</h4>
-        <p class="address">
-          Jonathan Doe
-          <br> 1600 Amphitheatre Parkway
-          <br> Mountain View, CA 94043 US
-          <br>
-          <span>(123) 456-7890</span>
-        </p>
-      </div>
-    </aside>
   </div>
 </section>
