--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -1,14 +1,15 @@
 <footer>
   <div class="row">
-    <div class="small-12 columns">
+    <div class="small-12 columns text-center">
       <ul class="social-links">
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="#"><i class="fa fa-github"></i></a></li>
       </ul>
-      <ul class="copyright">
+      <ul class="watermark">
+        <li>Header photo by <a title="Flickr" href="https://www.flickr.com/photos/bananaboy24/">François F.</a></li>
         <li>Design influenced by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
       </ul>
     </div>
-    <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
+    <div id="go-top" class="text-center"><a class="smoothscroll" title="Back to Top" href="#home"><i class="fa fa-chevron-up"></i></a></div>
   </div>
 </footer>
