--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,7 +15,7 @@ title: Méril Pilon
     </div>
   </div>
 </section>
-<section id="resume">
+<section id="resume" class="main_content">
   <div class="row work">
     <div class="small-3 columns header-col">
       <h1><span>Work</span></h1>
@@ -52,44 +52,21 @@ title: Méril Pilon
     </div>
   </div>
 </section>
-<section id="testimonials">
-  <div class="text-container">
-    <div class="row">
-      <div class="two columns header-col">
-        <h1><span>Client Testimonials</span></h1>
-      </div>
-      <div class="ten columns flex-container">
-        <div class="flexslider">
-          <ul class="slides">
-            <li>
-              <blockquote>
-                <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
-                </p>
-                <cite>Steve Jobs</cite>
-              </blockquote>
-            </li>
-            <li>
-              <blockquote>
-                <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
-                </p>
-                <cite>Mr. Adobe</cite>
-              </blockquote>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="contact">
+<section id="education" class="main_content">
   <div class="row">
-    <div class="small-3 columns">
-      <h1>CONTACT</h1>
+    <div class="small-3 columns header-col">
+      <h1><span>EDUCATION</span></h1>
     </div>
     <div class="small-9 columns">
-      <p class="lead">
-        Email me at: <a href="mailto:address@email.com">address [at] email.com</a>
-      </p>
+      <div class="row item">
+        <div class="small-12 columns main-col">
+          <h3>School name</h3>
+          <p class="info">Position <span>&bull;</span> <em class="date">March 2009 - March 2010</em></p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
