Add ref to humans.txt + delete Testimonials to use Education instead (css and html)2

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -23,8 +23,8 @@ title: Méril Pilon
     <div class="small-9 columns">
       <div class="row item">
         <div class="small-12 columns main-col">
-          <h3>Company</h3>
-          <p class="info">Position <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+          <h3>Position</h3>
+          <p class="info">Company <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
           <p>
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
           </p>
@@ -61,7 +61,7 @@ title: Méril Pilon
       <div class="row item">
         <div class="small-12 columns main-col">
           <h3>School name</h3>
-          <p class="info">Position <span>&bull;</span> <em class="date">March 2009 - March 2010</em></p>
+          <p class="info">Degree<span>&bull;</span> <em class="date">March 2009 - March 2010</em></p>
           <p>
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
           </p>
