--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -11,434 +11,403 @@ $text-lighter-color: #EBEEEE;
 
 /* General START */
 body {
-  background-color: $body-color;
+    background-color: $body-color;
 }
 
 p {
-  font-family: 'opensans-regular', sans-serif;
-  font-weight: normal;
-  line-height: 30px;
-  color: #838C95;
+    font-family: 'opensans-regular', sans-serif;
+    font-weight: normal;
+    line-height: 30px;
+    color: #838C95;
 }
 
 section {
-  padding-top: 90px;
-  padding-bottom: 90px;
+    padding-top: 90px;
+    padding-bottom: 90px;
 }
 /* General END */
 
 /* Header START*/
 header {
-  height: 800px;
-  min-height: 500px;
-  background: $body-color url(../images/header-background.jpg) no-repeat top center;
-  background-size: cover;
-  overflow: hidden;
+    height: 800px;
+    min-height: 500px;
+    background: $body-color url(../images/header-background.jpg) no-repeat top center;
+    background-size: cover;
+    overflow: hidden;
 }
 
 header:before {
-  content: '';
-  display: inline-block;
-  vertical-align: middle;
-  height: 100%;
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
 }
 
 header .banner {
-  display: inline-block;
-  vertical-align: middle;
-  width: 85%;
-  padding-bottom: 30px;
+    display: inline-block;
+    vertical-align: middle;
+    width: 85%;
+    padding-bottom: 30px;
 }
 
 header .opaque {
-  background-color: #333;
+    background-color: #333;
 }
 
 header .banner-text h1 {
-  font: 90px/1.1em 'opensans-bold', sans-serif;
-  color: #fff;
-  letter-spacing: -2px;
-  margin: 0 auto 18px auto;
-  text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
+    font: 90px/1.1em 'opensans-bold', sans-serif;
+    color: #fff;
+    letter-spacing: -2px;
+    margin: 0 auto 18px auto;
+    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 
 header .banner-text h3 {
-  font: 18px/1.9em 'librebaskerville-regular', serif;
-  color: #fff;
-  margin: 0 auto;
-  width: 70%;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+    font: 18px/1.9em 'librebaskerville-regular', serif;
+    color: #fff;
+    margin: 0 auto;
+    width: 70%;
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
 }
 
 header .banner-text hr {
-  width: 60%;
-  margin: 12px auto;
-  border-color: rgba(175, 175, 175, 0.6);
+    width: 60%;
+    margin: 12px auto;
+    border-color: rgba(175, 175, 175, 0.6);
 }
 
 header .social {
-  margin: 0;
-  font-size: 30px;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+    margin: 0;
+    font-size: 30px;
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
 }
 
 header .social li {
-  display: inline-block;
-  margin: 0 15px;
+    display: inline-block;
+    margin: 0 15px;
 }
 
 header .social li a {
-  color: #fff;
-  transition: all .3s ease-in-out;
+    color: #fff;
+    transition: all .3s ease-in-out;
 }
 
 header .scrolldown a {
-  position: absolute;
-  bottom: 35px;
-  left: 50%;
-  margin-left: -24px;
-  color: #fff;
-  display: block;
-  font-size: 48px;
-  transition: all .3s ease-in-out;
+    position: absolute;
+    bottom: 35px;
+    left: 50%;
+    margin-left: -24px;
+    color: #fff;
+    display: block;
+    font-size: 48px;
+    transition: all .3s ease-in-out;
 }
 
 header .social li a:hover,
 header .scrolldown a:hover {
-  color: $a-hover-color;
+    color: $a-hover-color;
 }
 
 #nav-wrap {
-  font: 12px 'opensans-bold', sans-serif;
-  width: 100%;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  position: fixed;
-  z-index: 5;
-  top: 0;
+    font: 12px 'opensans-bold', sans-serif;
+    width: 100%;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    position: fixed;
+    z-index: 5;
+    top: 0;
 }
 
 #nav-wrap > a.mobile-btn {
-  display: none;
+    display: none;
 }
 
 ul#nav {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 ul#nav li {
-  position: relative;
-  list-style: none;
-  height: 48px;
-  display: inline-block;
+    position: relative;
+    list-style: none;
+    height: 48px;
+    display: inline-block;
 }
 
 ul#nav li a {
-  font-size: 12px;
-  display: inline-block;
-  padding: 8px 13px;
-  line-height: 32px;
-  text-decoration: none;
-  color: #fff;
-  transition: color .2s ease-in-out;
+    font-size: 12px;
+    display: inline-block;
+    padding: 8px 13px;
+    line-height: 32px;
+    text-decoration: none;
+    color: #fff;
+    transition: color .2s ease-in-out;
 }
 
 ul#nav li a:active {
-  background-color: transparent !important;
+    background-color: transparent !important;
 }
 
 ul#nav li.current a {
-  color: #F06000;
+    color: #F06000;
 }
 /* Header END */
 
 /* About START */
 #about {
-  background: #2B2B2B;
+    background: #2B2B2B;
 }
 
 #about h2 {
-  font: 22px/30px 'opensans-bold', sans-serif;
-  color: #fff;
-  margin-bottom: 12px;
+    font: 22px/30px 'opensans-bold', sans-serif;
+    color: #fff;
+    margin-bottom: 12px;
 }
 
 #about .button {
-  margin: 5px;
-  background: #444;
+    margin: 5px;
+    background: #444;
 }
 
 #about .button:hover {
-  background: #fff;
-  color: #2B2B2B;
+    background: #fff;
+    color: #2B2B2B;
 }
 
 #about .button i {
-  margin-right: 15px;
-  font-size: 20px;
+    margin-right: 15px;
+    font-size: 20px;
 }
 /* About END */
 
 /* Resume START */
 .main_content {
-  background: #fff;
+    background: #fff;
 }
+
 .main_content a,
 .main_content a:visited {
-  color: #11ABB0;
+    color: #11ABB0;
 }
+
 .main_content a:hover,
 .main_content a:focus {
-  color: #313131;
+    color: #313131;
 }
+
 .main_content h1 {
-  font: 18px/24px 'opensans-bold', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+    font: 18px/24px 'opensans-bold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
+
 .main_content h1 span {
-  border-bottom: 3px solid #11ABB0;
-  padding-bottom: 6px;
+    border-bottom: 3px solid #11ABB0;
+    padding-bottom: 6px;
 }
+
 .main_content h3 {
-  font: 25px/30px 'opensans-bold', sans-serif;
+    font: 25px/30px 'opensans-bold', sans-serif;
 }
+
 .main_content .header-col {
-  padding-top: 9px;
+    padding-top: 9px;
 }
+
 .main_content .main-col {
-  padding-right: 10%;
+    padding-right: 10%;
 }
+
 .education,
 .work {
-  margin-bottom: 48px;
-  padding-bottom: 24px;
-  border-bottom: 1px solid #E8E8E8;
+    margin-bottom: 48px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #E8E8E8;
 }
+
 .main_content .info {
-  font: 16px/24px 'librebaskerville-italic', serif;
-  color: #6E7881;
-  margin-bottom: 18px;
-  margin-top: 9px;
+    font: 16px/24px 'librebaskerville-italic', serif;
+    color: #6E7881;
+    margin-bottom: 18px;
+    margin-top: 9px;
 }
+
 .main_content .info span {
-  margin-right: 5px;
-  margin-left: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
 }
+
 .main_content .date {
-  font: 15px/24px 'opensans-regular', sans-serif;
-  margin-top: 6px;
+    font: 15px/24px 'opensans-regular', sans-serif;
+    margin-top: 6px;
 }
+
 .bars {
-  width: 95%;
-  float: left;
+    width: 95%;
+    float: left;
 }
+
 .bars .skills {
-  margin-top: 36px;
-  margin-left: 0;
-  list-style: none;
+    margin-top: 36px;
+    margin-left: 0;
+    list-style: none;
 }
+
 .bars li {
-  position: relative;
-  margin-bottom: 60px;
-  background: #ccc;
-  height: 42px;
-  border-radius: 3px;
+    position: relative;
+    margin-bottom: 60px;
+    background: #ccc;
+    height: 42px;
+    border-radius: 3px;
 }
+
 .bars li em {
-  font: 15px 'opensans-bold', sans-serif;
-  color: $bar-color;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  position: relative;
-  top: -36px;
+    font: 15px 'opensans-bold', sans-serif;
+    color: $bar-color;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    position: relative;
+    top: -36px;
 }
+
 .bar-expand {
-  position: absolute;
-  background: $bar-color;
-  height: 42px;
-  border-radius: 3px 0 0 3px;
+    position: absolute;
+    background: $bar-color;
+    height: 42px;
+    border-radius: 3px 0 0 3px;
 }
+
 .skill1 {
-  width: 60%;
+    width: 60%;
 }
+
 .skill2 {
-  width: 55%;
+    width: 55%;
 }
+
 .skill3 {
-  width: 50%;
+    width: 50%;
 }
+
 .skill4 {
-  width: 90%;
+    width: 90%;
 }
+
 .skill5 {
-  width: 80%;
+    width: 80%;
 }
+
 .skill6 {
-  width: 50%;
+    width: 50%;
 }
 /* Resume END */
 
-/* Testimonials START
-#testimonials {
-  background: #1F1F1F url(../images/testimonials-bg.jpg) no-repeat center center;
-  background-size: cover !important;
-  background-attachment: fixed;
-  position: relative;
-  min-height: 200px;
-  width: 100%;
-  overflow: hidden;
-}
-#testimonials .text-container {
-  padding-top: 96px;
-  padding-bottom: 66px;
-}
-#testimonials h1 {
-  font: 18px/24px 'opensans-bold', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  color: #fff;
-}
-#testimonials h1 span {
-  display: none;
-}
-#testimonials .header-col {
-  padding-top: 9px;
-}
-#testimonials .header-col h1:before {
-  font-family: 'FontAwesome';
-  content: "\f10d";
-  padding-right: 10px;
-  font-size: 72px;
-  line-height: 72px;
-  text-align: left;
-  float: left;
-  color: #fff;
-}
-#testimonials blockquote {
-  margin: 0 0px 30px 0px;
-  padding-left: 0;
-  position: relative;
-  text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
-}
-#testimonials blockquote:before {
-  content: none;
-}
-#testimonials blockquote p {
-  font-family: 'librebaskerville-italic', serif;
-  padding: 0;
-  font-size: 24px;
-  line-height: 48px;
-  color: #fff
-}
-#testimonials blockquote cite {
-  display: block;
-  font-size: 12px;
-  font-style: normal;
-  line-height: 18px;
-  color: #fff;
-}
-#testimonials blockquote cite:before {
-  content: "\2014 \0020";
-}
-#testimonials blockquote cite a,
-#testimonials blockquote cite a:visited {
-  color: #8B9798;
-  border: none
-}
-/* Testimonials END */
-
-/* Contact START */
+/* Education START */
 #education {
-  background: #191919;
-  color: #636363;
+    background: #191919;
+    color: #636363;
 }
-#contact a,
-#contact a:visited {
-  color: #fff;
+
+#education a,
+#education a:visited {
+    color: #fff;
 }
-#contact a:hover,
-#contact a:focus {
-  color: $a-hover-color;
+
+#education a:hover,
+#education a:focus {
+    color: $a-hover-color;
 }
+
 #education h1 {
-  font: 18px/24px 'opensans-bold', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  color: $text-lighter-color;
+    font: 18px/24px 'opensans-bold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: $text-lighter-color;
 }
+
 #education h1 span {
-  border-bottom: 3px solid #11ABB0;
-  padding-bottom: 6px;
+    border-bottom: 3px solid #11ABB0;
+    padding-bottom: 6px;
 }
+
 #education h1 i {
-  position: relative;
-  top: -10px;
+    position: relative;
+    top: -10px;
 }
-#contact p.lead {
-  font: 18px/36px 'opensans-light', sans-serif;
-  margin: 0;
+
+#education h3{
+    color: $text-lighter-color;
 }
-/* Contact END */
+/* Education END */
 
 /* Footer START */
 footer {
-  padding-top: 48px;
-  margin-bottom: 48px;
-  color: #303030;
-  position: relative;
+    padding-top: 48px;
+    margin-bottom: 48px;
+    color: #303030;
+    position: relative;
 }
+
 footer a:hover,
 footer a:focus {
-  color: $a-hover-color;
+    color: $a-hover-color;
 }
+
 footer a {
-  transition: all 0.2s ease-in-out;
-  color: $text-gray-color;
+    transition: all 0.2s ease-in-out;
+    color: $text-gray-color;
 }
+
 footer .watermark li {
-  display: inline-block;
+    display: inline-block;
 }
+
 footer .watermark li:before {
-  content: "\2022";
-  padding-left: 10px;
-  padding-right: 10px;
-  color: $a-hover-color;
+    content: "\2022";
+    padding-left: 10px;
+    padding-right: 10px;
+    color: $a-hover-color;
 }
+
 footer .watermark li:first-child:before {
-  display: none;
+    display: none;
 }
+
 footer .social-links {
-  margin: 18px 0 30px 0;
-  font-size: 30px;
+    margin: 18px 0 30px 0;
+    font-size: 30px;
 }
+
 footer .social-links li {
-  display: inline-block;
-  margin-left: 42px;
+    display: inline-block;
+    margin-left: 42px;
 }
+
 footer .social-links li:first-child {
-  margin-left: 0;
+    margin-left: 0;
 }
+
 #go-top {
-  position: absolute;
-  top: -24px;
-   left: 50%;
-   margin-left: -30px;
+    position: absolute;
+    top: -24px;
+    left: 50%;
+    margin-left: -30px;
 }
+
 #go-top a {
-  text-decoration: none;
-  display: block;
-  width: 60px;
-  height: 60px;
-  background-color: $text-gray-color;
-  transition: all 0.2s ease-in-out;
-  color: #fff;
-  font-size: 24px;
-  line-height: 60px;
-  border-radius: 100%;
-  margin-top: -5px;
+    text-decoration: none;
+    display: block;
+    width: 60px;
+    height: 60px;
+    background-color: $text-gray-color;
+    transition: all 0.2s ease-in-out;
+    color: #fff;
+    font-size: 24px;
+    line-height: 60px;
+    border-radius: 100%;
+    margin-top: -5px;
 }
+
 #go-top a:hover {
-  background-color: $a-hover-color;
+    background-color: $a-hover-color;
 }
 /* Footer END */
