Add missing file, the header

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,13 +5,12 @@ title: Méril Pilon
   <div class="row">
     <div class="small-12 columns">
       <h2>About Me</h2>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
-      </p>
+      <p>TODO</p>
     </div>
   </div>
   <div class="row">
     <div class="small-12 columns">
-      <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+      <a href="files/CV_Meril_PILON_2014.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
     </div>
   </div>
 </section>
@@ -23,11 +22,32 @@ title: Méril Pilon
     <div class="small-9 columns">
       <div class="row item">
         <div class="small-12 columns main-col">
-          <h3>Position</h3>
-          <p class="info">Company <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-          </p>
+          <h3>Software Developer</h3>
+          <p class="info"><a href="http://www.ruffer.co.uk/">Ruffer LLP</a> <span>&bull;</span> London - UK <span>&bull;</span> <em class="date">October 2014 - Present</em></p>
+          <p>TODO</p>
+        </div>
+      </div>
+      <div class="row item">
+        <div class="small-12 columns main-col">
+          <h3>.NET Analyst</h3>
+          <p class="info"><a href="http://www.soprasteria.co.uk/">Sopra Steria Group</a> <span>&bull;</span> Lyon - France <span>&bull;</span> <em class="date">September 2013 - September 2014</em></p>
+          <ul>
+            <li>Communication with clients on design, implementation, projected timescales and testing</li>
+            <li>Technical guidance and expertise: designed and staged SQL Server migrations, provided technical support to deployment teams</li>
+            <li>Outsourcing: analysed and sent requests, led and helped developers in Spain</li>
+            <li>C# developments (.NET Framework) using Microsoft SQL technologies</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row item">
+        <div class="small-12 columns main-col">
+          <h3>Research Intern</h3>
+          <p class="info"><a href="http://www.airbusgroup.com/int/en/innovation-environment/airbus-group-innovations.html">Airbus Group Innovations</a> <span>&bull;</span> Cardiff - UK <span>&bull;</span> <em class="date">July 2013 - September 2013</em></p>
+          <ul>
+            <li>Performed needs assessment of Airbus’s Helicopter request and proposed a solution</li>
+            <li>Created a state of the art report about JavaScript libraries related to data visualisation</li>
+            <li>Developed the solution: a new application using web technologies</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -37,16 +57,15 @@ title: Méril Pilon
       <h1><span>Skills</span></h1>
     </div>
     <div class="small-9 columns main-col">
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-      </p>
+      <p>TODO</p>
       <div class="bars">
         <ul class="skills">
-          <li><span class="bar-expand skill1"></span><em>Skill1</em></li>
-          <li><span class="bar-expand skill2"></span><em>Skill2</em></li>
-          <li><span class="bar-expand skill3"></span><em>Skill3</em></li>
-          <li><span class="bar-expand skill4"></span><em>Skill4</em></li>
-          <li><span class="bar-expand skill5"></span><em>Skill5</em></li>
-          <li><span class="bar-expand skill6"></span><em>Skill6</em></li>
+          <li><span class="bar-expand skill1"></span><em>JavaScript</em></li>
+          <li><span class="bar-expand skill2"></span><em>.NET</em></li>
+          <li><span class="bar-expand skill3"></span><em>MongoDB</em></li>
+          <li><span class="bar-expand skill4"></span><em>SQL Server</em></li>
+          <li><span class="bar-expand skill5"></span><em>Linux</em></li>
+          <li><span class="bar-expand skill6"></span><em>HTML5 & CSS3</em></li>
         </ul>
       </div>
     </div>
@@ -60,11 +79,16 @@ title: Méril Pilon
     <div class="small-9 columns">
       <div class="row item">
         <div class="small-12 columns main-col">
-          <h3>School name</h3>
-          <p class="info">Degree<span>&bull;</span> <em class="date">March 2009 - March 2010</em></p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-          </p>
+          <h3>Master of Science</h3>
+          <p class="info"><a href="http://www.cpe.fr/?lang=en">CPE Lyon</a><span>&bull;</span> Computer Science<span>&bull;</span> <em class="date">2011 - 2014</em></p>
+          <p>TODO</p>
+        </div>
+      </div>
+      <div class="row item">
+        <div class="small-12 columns main-col">
+          <h3>Bachelor of Science</h3>
+          <p class="info"><a href="http://www.univ-lyon1.fr/home-759942.kjsp?RH=WWW-FR">Université Claude Bernard (Lyon I)</a><span>&bull;</span> Computer Science<span>&bull;</span> <em class="date">2009 - 2011</em></p>
+          <p>TODO</p>
         </div>
       </div>
     </div>
