fix hr margin, typo problem

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,16 +1,16 @@
 ---
-title: Méril Pilon
+title: CV Template
 ---
 <section id="about">
   <div class="row">
     <div class="small-12 columns">
       <h2>About Me</h2>
-      <p>TODO</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
     </div>
   </div>
   <div class="row">
     <div class="small-12 columns">
-      <a href="files/CV_Meril_PILON_2014.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
+      <a href="files/file.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
     </div>
   </div>
 </section>
@@ -22,32 +22,20 @@ title: Méril Pilon
     <div class="small-9 columns">
       <div class="row item">
         <div class="small-12 columns main-col">
-          <h3>Software Developer</h3>
-          <p class="info"><a href="http://www.ruffer.co.uk/">Ruffer LLP</a> <span>&bull;</span> London - UK <span>&bull;</span> <em class="date">October 2014 - Present</em></p>
-          <p>TODO</p>
+          <h3>Position 1</h3>
+          <p class="info">Company <span>&bull;</span> <em class="date">April 2011 - Present</em></p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+          </p>
         </div>
       </div>
       <div class="row item">
         <div class="small-12 columns main-col">
-          <h3>.NET Analyst</h3>
-          <p class="info"><a href="http://www.soprasteria.co.uk/">Sopra Steria Group</a> <span>&bull;</span> Lyon - France <span>&bull;</span> <em class="date">September 2013 - September 2014</em></p>
-          <ul>
-            <li>Communication with clients on design, implementation, projected timescales and testing</li>
-            <li>Technical guidance and expertise: designed and staged SQL Server migrations, provided technical support to deployment teams</li>
-            <li>Outsourcing: analysed and sent requests, led and helped developers in Spain</li>
-            <li>C# developments (.NET Framework) using Microsoft SQL technologies</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row item">
-        <div class="small-12 columns main-col">
-          <h3>Research Intern</h3>
-          <p class="info"><a href="http://www.airbusgroup.com/int/en/innovation-environment/airbus-group-innovations.html">Airbus Group Innovations</a> <span>&bull;</span> Cardiff - UK <span>&bull;</span> <em class="date">July 2013 - September 2013</em></p>
-          <ul>
-            <li>Performed needs assessment of Airbus’s Helicopter request and proposed a solution</li>
-            <li>Created a state of the art report about JavaScript libraries related to data visualisation</li>
-            <li>Developed the solution: a new application using web technologies</li>
-          </ul>
+          <h3>Position 2</h3>
+          <p class="info">Company <span>&bull;</span> <em class="date">March 2010 - April 2011</em></p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+          </p>
         </div>
       </div>
     </div>
@@ -57,15 +45,15 @@ title: Méril Pilon
       <h1><span>Skills</span></h1>
     </div>
     <div class="small-9 columns main-col">
-      <p>TODO</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       <div class="bars">
         <ul class="skills">
-          <li><span class="bar-expand skill1"></span><em>JavaScript</em></li>
-          <li><span class="bar-expand skill2"></span><em>.NET</em></li>
-          <li><span class="bar-expand skill3"></span><em>MongoDB</em></li>
-          <li><span class="bar-expand skill4"></span><em>SQL Server</em></li>
-          <li><span class="bar-expand skill5"></span><em>Linux</em></li>
-          <li><span class="bar-expand skill6"></span><em>HTML5 & CSS3</em></li>
+          <li><span class="bar-expand skill1"></span><em>Skill 1</em></li>
+          <li><span class="bar-expand skill2"></span><em>Skill 2</em></li>
+          <li><span class="bar-expand skill3"></span><em>Skill 3</em></li>
+          <li><span class="bar-expand skill4"></span><em>Skill 4</em></li>
+          <li><span class="bar-expand skill5"></span><em>Skill 5</em></li>
+          <li><span class="bar-expand skill6"></span><em>Skill 6</em></li>
         </ul>
       </div>
     </div>
@@ -79,16 +67,9 @@ title: Méril Pilon
     <div class="small-9 columns">
       <div class="row item">
         <div class="small-12 columns main-col">
-          <h3>Master of Science</h3>
-          <p class="info"><a href="http://www.cpe.fr/?lang=en">CPE Lyon</a><span>&bull;</span> Computer Science<span>&bull;</span> <em class="date">2011 - 2014</em></p>
-          <p>TODO</p>
-        </div>
-      </div>
-      <div class="row item">
-        <div class="small-12 columns main-col">
-          <h3>Bachelor of Science</h3>
-          <p class="info"><a href="http://www.univ-lyon1.fr/home-759942.kjsp?RH=WWW-FR">Université Claude Bernard (Lyon I)</a><span>&bull;</span> Computer Science<span>&bull;</span> <em class="date">2009 - 2011</em></p>
-          <p>TODO</p>
+          <h3>Master of Things</h3>
+          <p class="info"><a href="http://www.example.com">School Name</a><span>&bull;</span> Computer Science<span>&bull;</span> <em class="date">2011 - 2014</em></p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
         </div>
       </div>
     </div>
