--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,7 +11,7 @@
     <title><%= data.page.title %></title>
     
     <%= favicon_tag 'images/favicon.png' %>
-    <%= stylesheet_link_tag "app", "style" %>
+    <%= stylesheet_link_tag "app" %>
     <%= javascript_include_tag "modernizr" %>
   </head>
   
