Fix for small screens + remove ref

--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -4,9 +4,12 @@
       <ul class="social-links">
         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
         <li><a href="#"><i class="fa fa-github"></i></a></li>
+        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+        <li><a href="#"><i class="fa fa-stack-exchange"></i></a></li>
+        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
       </ul>
       <ul class="watermark">
-        <li>Header photo by <a title="Flickr" href="https://www.flickr.com/photos/bananaboy24/">François F.</a></li>
+        <!-- <li>Header photo by <a title="Flickr" href="https://www.flickr.com/photos/bananaboy24/">François F.</a></li> -->
         <li>Design influenced by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
       </ul>
     </div>
