--- a/source/_header.erb
+++ b/source/_header.erb
@@ -17,6 +17,9 @@
       <ul class="social">
         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
         <li><a href="#"><i class="fa fa-github"></i></a></li>
+        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+        <li><a href="#"><i class="fa fa-stack-exchange"></i></a></li>
+        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
       </ul>
     </div>
   </div>
