small fixes, add white color on the header

--- a/source/_header.erb
+++ b/source/_header.erb
@@ -12,7 +12,7 @@
   <div class="row banner text-center">
     <div class="banner-text">
       <h1 class="responsive-headline">I am John Doe.</h1>
-      <h3>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h3>
+      <h3>Sed ut <span class="highlight">perspiciatis unde</span> omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab <span class="highlight">illo inventore</span> veritatis et quasi <span class="highlight">architecto beatae</span> vitae dicta sunt explicabo.</h3>
       <hr />
       <ul class="social">
         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
