Hello Ceevee, bye bye CV Template

--- a/source/_header.erb
+++ b/source/_header.erb
@@ -11,8 +11,8 @@
   </nav>
   <div class="row banner text-center">
     <div class="banner-text">
-      <h1 class="responsive-headline">I am John Doe.</h1>
-      <h3>Sed ut <span class="highlight">perspiciatis unde</span> omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab <span class="highlight">illo inventore</span> veritatis et quasi <span class="highlight">architecto beatae</span> vitae dicta sunt explicabo.</h3>
+      <h1 class="responsive-headline">I am Ceevee.</h1>
+      <h3>Ceevee <span class="highlight">is a CSS/ HTML template</span> that you can use to build your CV online. The template is based on <span class="highlight">Middleman</span> an <span class="highlight">easy-to-use framework</span> that will allow you to set up your own version very quickly.</h3>
       <hr />
       <ul class="social">
         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
